--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/fonts.css">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/media.css">
   <title>Blanchard — Художественная галерея</title>
 </head>
 <body>
   <header class="header">
     <div class="container header__container">
       <div class="header__top flex">
+        <div class="header__burger burger">
+          <button class="burger__btn btn-reset">
+            <span class="burger__btn-line"></span>
+            <span class="burger__btn-line"></span>
+            <span class="burger__btn-line"></span>
+          </button>
+        </div>
         <a href="#" class="header__logo">
           <svg width="173" height="40" viewBox="0 0 173 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M2.78965 32.7802L0.289746 29.1348H2.09561L3.79365 31.7425L5.50518 29.1348H7.29756L4.79092 32.7802L7.42559 36.5873H5.6332L3.79365 33.7977L1.96084 36.5873H0.168457L2.78965 32.7802Z" fill="white"/>
@@ -81,6 +89,14 @@
               </a>
             </li>
           </ul>
+          <div class="header__menu-block">
+            <a href="#" class="header__login-link">
+              <svg class="header__login-icon" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.12056 9.09278L6.13889 10.1111L9.75 6.5L6.13889 2.88889L5.12056 3.90722L6.98389 5.77778H0V7.22222H6.98389L5.12056 9.09278ZM11.5556 0H1.44444C0.642778 0 0 0.65 0 1.44444V4.33333H1.44444V1.44444H11.5556V11.5556H1.44444V8.66667H0V11.5556C0 12.35 0.642778 13 1.44444 13H11.5556C12.35 13 13 12.35 13 11.5556V1.44444C13 0.65 12.35 0 11.5556 0Z"/>
+              </svg>
+              Войти
+            </a>
+          </div>
         </nav>
         <div class="header__login">
           <a href="#" class="header__login-link">
@@ -89,6 +105,14 @@
             </svg>
             Войти
           </a>
+        </div>
+        <div class="header__search-top search-top">
+          <button class="search-top__btn btn-reset">
+            <svg class="search-top__icon" width="30" height="29" viewBox="0 0 30 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect width="9.15446" height="2.28862" transform="matrix(-0.718931 0.695081 0.718931 0.695081 6.58105 21.0461)"/>
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M16.1246 24.174C10.0376 24.174 5.32763 19.2726 5.32763 13.5104C5.32763 7.74823 10.0376 2.84676 16.1246 2.84676C22.2115 2.84676 26.9215 7.74823 26.9215 13.5104C26.9215 19.2726 22.2115 24.174 16.1246 24.174ZM16.1246 26.8399C8.76285 26.8399 2.79502 20.8721 2.79502 13.5104C2.79502 6.14869 8.76285 0.180847 16.1246 0.180847C23.4863 0.180847 29.4541 6.14869 29.4541 13.5104C29.4541 20.8721 23.4863 26.8399 16.1246 26.8399Z"/>
+            </svg>
+          </button>
         </div>
       </div>
     </div>
@@ -99,5 +123,6 @@
   <footer class="footer">
 
   </footer>
+  <script src="./js/burger-menu.js"></script>
 </body>
 </html>
