--- a/index.html
+++ b/index.html
@@ -106,14 +106,23 @@
             Войти
           </a>
         </div>
-        <div class="header__search-top search-top">
+        <form action="#" class="header__search-top search-top">
           <button class="search-top__btn btn-reset">
             <svg class="search-top__icon" width="30" height="29" viewBox="0 0 30 29" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect width="9.15446" height="2.28862" transform="matrix(-0.718931 0.695081 0.718931 0.695081 6.58105 21.0461)"/>
               <path fill-rule="evenodd" clip-rule="evenodd" d="M16.1246 24.174C10.0376 24.174 5.32763 19.2726 5.32763 13.5104C5.32763 7.74823 10.0376 2.84676 16.1246 2.84676C22.2115 2.84676 26.9215 7.74823 26.9215 13.5104C26.9215 19.2726 22.2115 24.174 16.1246 24.174ZM16.1246 26.8399C8.76285 26.8399 2.79502 20.8721 2.79502 13.5104C2.79502 6.14869 8.76285 0.180847 16.1246 0.180847C23.4863 0.180847 29.4541 6.14869 29.4541 13.5104C29.4541 20.8721 23.4863 26.8399 16.1246 26.8399Z"/>
             </svg>
           </button>
-        </div>
+          <div class="search-top__wrapper">
+            <input class="search-top__submit" type="search" name="search">
+            <button class="search-top__close btn-reset">
+              <svg class="search-top__icon-close" width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="29.567" height="2.9567" transform="matrix(0.707093 0.707121 -0.707093 0.707121 2.09375 0)" fill="white"/>
+                <rect width="29.567" height="2.9567" transform="matrix(0.707093 -0.707121 0.707093 0.707121 0 20.9074)" fill="white"/>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </div>
   </header>
@@ -124,5 +133,6 @@
 
   </footer>
   <script src="./js/burger-menu.js"></script>
+  <script src="./js/search-btn.js"></script>
 </body>
 </html>
