wrote a adaptive form search

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </button>
         </div>
         <a href="#" class="header__logo">
-          <svg width="173" height="40" viewBox="0 0 173 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="header__logo-img" width="173" height="40" viewBox="0 0 173 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M2.78965 32.7802L0.289746 29.1348H2.09561L3.79365 31.7425L5.50518 29.1348H7.29756L4.79092 32.7802L7.42559 36.5873H5.6332L3.79365 33.7977L1.96084 36.5873H0.168457L2.78965 32.7802Z" fill="white"/>
             <path d="M7.60078 29.1348H9.32578L10.8419 33.3597C11.071 33.9616 11.2237 34.5276 11.3001 35.0577H11.354C11.3944 34.8106 11.4686 34.5119 11.5764 34.1615C11.6842 33.8066 12.2547 32.1311 13.2879 29.1348H14.9994L11.8122 37.5778C11.2327 39.1276 10.2669 39.9025 8.91475 39.9025C8.56436 39.9025 8.22295 39.8644 7.89053 39.788V38.5347C8.12861 38.5886 8.40039 38.6155 8.70586 38.6155C9.46953 38.6155 10.0063 38.173 10.3163 37.2881L10.5926 36.5873L7.60078 29.1348Z" fill="white"/>
             <path d="M23.2808 39.222H21.8051V36.5873H16.6975V39.222H15.2353V35.3609H15.8417C16.3718 34.6018 16.7918 33.6854 17.1018 32.6117C17.4162 31.5336 17.6026 30.3746 17.661 29.1348H22.1892V35.3609H23.2808V39.222ZM20.6326 35.3609V30.3477H19.0289C18.9436 31.273 18.7639 32.185 18.4898 33.0834C18.2203 33.9818 17.8901 34.741 17.4993 35.3609H20.6326Z" fill="white"/>
@@ -106,8 +106,17 @@
             Войти
           </a>
         </div>
+        <button class="search-top__btn btn-reset">
+          <svg class="search-top__icon" width="30" height="29" viewBox="0 0 30 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="9.15446" height="2.28862" transform="matrix(-0.718931 0.695081 0.718931 0.695081 6.58105 21.0461)"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M16.1246 24.174C10.0376 24.174 5.32763 19.2726 5.32763 13.5104C5.32763 7.74823 10.0376 2.84676 16.1246 2.84676C22.2115 2.84676 26.9215 7.74823 26.9215 13.5104C26.9215 19.2726 22.2115 24.174 16.1246 24.174ZM16.1246 26.8399C8.76285 26.8399 2.79502 20.8721 2.79502 13.5104C2.79502 6.14869 8.76285 0.180847 16.1246 0.180847C23.4863 0.180847 29.4541 6.14869 29.4541 13.5104C29.4541 20.8721 23.4863 26.8399 16.1246 26.8399Z"/>
+          </svg>
+        </button>
         <form action="#" class="header__search-top search-top">
-          <button class="search-top__btn btn-reset">
+          <!-- Нужно будет доработать поле поиска -->
+          <!-- Моя логика сейчас в том, чтобы вынести кнопку поиска -->
+          <!-- Затем дублировать сюда форму поиска -->
+          <button class="search-top__in-form btn-reset">
             <svg class="search-top__icon" width="30" height="29" viewBox="0 0 30 29" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect width="9.15446" height="2.28862" transform="matrix(-0.718931 0.695081 0.718931 0.695081 6.58105 21.0461)"/>
               <path fill-rule="evenodd" clip-rule="evenodd" d="M16.1246 24.174C10.0376 24.174 5.32763 19.2726 5.32763 13.5104C5.32763 7.74823 10.0376 2.84676 16.1246 2.84676C22.2115 2.84676 26.9215 7.74823 26.9215 13.5104C26.9215 19.2726 22.2115 24.174 16.1246 24.174ZM16.1246 26.8399C8.76285 26.8399 2.79502 20.8721 2.79502 13.5104C2.79502 6.14869 8.76285 0.180847 16.1246 0.180847C23.4863 0.180847 29.4541 6.14869 29.4541 13.5104C29.4541 20.8721 23.4863 26.8399 16.1246 26.8399Z"/>
@@ -123,6 +132,9 @@
             </button>
           </div>
         </form>
+      </div>
+      <div class="header__bottom">
+
       </div>
     </div>
   </header>
