--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
   <header class="header">
-    <div class="container header__container">
-      <div class="header__top flex">
+    <div class="header__top">
+      <div class="container header__container flex">
         <div class="header__burger burger">
           <button class="burger__btn btn-reset">
             <span class="burger__btn-line"></span>
@@ -133,10 +133,9 @@
           </div>
         </form>
       </div>
-      <div class="header__bottom">
 
-      </div>
     </div>
+
   </header>
   <main>
 
