--- a/index.html
+++ b/index.html
@@ -143,22 +143,22 @@
             </button>
             <div class="dropdown__content">
               <ul class="dropdown__list">
-                <li class="dropdown__element element-img-1">
+                <li class="dropdown__element element-img-1-1">
                   <a href="#" class="dropdown__link">
                     Тинторетто
                   </a>
                 </li>
-                <li class="dropdown__element element-img-2">
+                <li class="dropdown__element element-img-1-2">
                   <a href="#" class="dropdown__link">
                     Фридрих
                   </a>
                 </li>
-                <li class="dropdown__element element-img-3">
+                <li class="dropdown__element element-img-1-3">
                   <a href="#" class="dropdown__link">
                     Леонардо
                   </a>
                 </li>
-                <li class="dropdown__element element-img-4">
+                <li class="dropdown__element element-img-1-4">
                   <a href="#" class="dropdown__link">
                     Верроккьо
                   </a>
@@ -173,7 +173,30 @@
                 <path d="M11 1L6 6L1 1"/>
               </svg>
             </button>
-
+            <div class="dropdown__content">
+              <ul class="dropdown__list">
+                <li class="dropdown__element element-img-2-1">
+                  <a href="#" class="dropdown__link">
+                    Моне
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-2-2">
+                  <a href="#" class="dropdown__link">
+                    Сислей
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-2-3">
+                  <a href="#" class="dropdown__link">
+                    Мане
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-2-4">
+                  <a href="#" class="dropdown__link">
+                    Ренуар
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="dropdown__item">
             <button class="dropdown__btn btn-reset">
@@ -182,7 +205,30 @@
                 <path d="M11 1L6 6L1 1"/>
               </svg>
             </button>
-
+            <div class="dropdown__content">
+              <ul class="dropdown__list">
+                <li class="dropdown__element element-img-3-1">
+                  <a href="#" class="dropdown__link">
+                    Ван Гог
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-3-2">
+                  <a href="#" class="dropdown__link">
+                    Сезанн
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-3-3">
+                  <a href="#" class="dropdown__link">
+                    Гоген
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-3-4">
+                  <a href="#" class="dropdown__link">
+                    Сёра
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="dropdown__item">
             <button class="dropdown__btn btn-reset">
@@ -191,7 +237,30 @@
                 <path d="M11 1L6 6L1 1"/>
               </svg>
             </button>
-
+            <div class="dropdown__content">
+              <ul class="dropdown__list">
+                <li class="dropdown__element element-img-4-1">
+                  <a href="#" class="dropdown__link">
+                    Кандинский
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-4-2">
+                  <a href="#" class="dropdown__link">
+                    Маринетти
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-4-3">
+                  <a href="#" class="dropdown__link">
+                    Малевич
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-4-4">
+                  <a href="#" class="dropdown__link">
+                    Пикассо
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="dropdown__item">
             <button class="dropdown__btn btn-reset">
@@ -200,7 +269,30 @@
                 <path d="M11 1L6 6L1 1"/>
               </svg>
             </button>
-
+            <div class="dropdown__content">
+              <ul class="dropdown__list">
+                <li class="dropdown__element element-img-5-1">
+                  <a href="#" class="dropdown__link">
+                    Карра
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-5-2">
+                  <a href="#" class="dropdown__link">
+                    Прателла
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-5-3">
+                  <a href="#" class="dropdown__link">
+                    Северини
+                  </a>
+                </li>
+                <li class="dropdown__element element-img-5-4">
+                  <a href="#" class="dropdown__link">
+                    Балла
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
         <form action="#" class="header__bottom-search search-bottom">
@@ -224,5 +316,6 @@
   </footer>
   <script src="./js/burger-menu.js"></script>
   <script src="./js/search-btn.js"></script>
+  <script src="./js/dropdown.js"></script>
 </body>
 </html>
