--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css"/>
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/fonts.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -60,7 +61,7 @@
         <nav class="header__nav">
           <ul class="header__list flex">
             <li class="header__item">
-              <a href="#" class="header__link">
+              <a href="#about" class="header__link">
                 О нас
               </a>
             </li>
@@ -143,28 +144,30 @@
               </svg>
             </button>
             <div class="dropdown__content">
-              <ul class="dropdown__list">
-                <li class="dropdown__element element-img-1-1">
-                  <a href="#" class="dropdown__link">
-                    Тинторетто
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-1-2">
-                  <a href="#" class="dropdown__link">
-                    Фридрих
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-1-3">
-                  <a href="#" class="dropdown__link">
-                    Леонардо
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-1-4">
-                  <a href="#" class="dropdown__link">
-                    Верроккьо
-                  </a>
-                </li>
-              </ul>
+              <div class="dropdown__custom-scroll">
+                <ul class="dropdown__list">
+                  <li class="dropdown__element element-img-1-1">
+                    <a href="#" class="dropdown__link">
+                      Тинторетто
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-1-2">
+                    <a href="#" class="dropdown__link">
+                      Фридрих
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-1-3">
+                    <a href="#" class="dropdown__link">
+                      Леонардо
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-1-4">
+                    <a href="#" class="dropdown__link">
+                      Верроккьо
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </li>
           <li class="dropdown__item">
@@ -175,28 +178,30 @@
               </svg>
             </button>
             <div class="dropdown__content">
-              <ul class="dropdown__list">
-                <li class="dropdown__element element-img-2-1">
-                  <a href="#" class="dropdown__link">
-                    Моне
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-2-2">
-                  <a href="#" class="dropdown__link">
-                    Сислей
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-2-3">
-                  <a href="#" class="dropdown__link">
-                    Мане
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-2-4">
-                  <a href="#" class="dropdown__link">
-                    Ренуар
-                  </a>
-                </li>
-              </ul>
+              <div class="dropdown__custom-scroll">
+                <ul class="dropdown__list">
+                  <li class="dropdown__element element-img-2-1">
+                    <a href="#" class="dropdown__link">
+                      Моне
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-2-2">
+                    <a href="#" class="dropdown__link">
+                      Сислей
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-2-3">
+                    <a href="#" class="dropdown__link">
+                      Мане
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-2-4">
+                    <a href="#" class="dropdown__link">
+                      Ренуар
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </li>
           <li class="dropdown__item">
@@ -207,28 +212,30 @@
               </svg>
             </button>
             <div class="dropdown__content">
-              <ul class="dropdown__list">
-                <li class="dropdown__element element-img-3-1">
-                  <a href="#" class="dropdown__link">
-                    Ван Гог
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-3-2">
-                  <a href="#" class="dropdown__link">
-                    Сезанн
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-3-3">
-                  <a href="#" class="dropdown__link">
-                    Гоген
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-3-4">
-                  <a href="#" class="dropdown__link">
-                    Сёра
-                  </a>
-                </li>
-              </ul>
+              <div class="dropdown__custom-scroll">
+                <ul class="dropdown__list">
+                  <li class="dropdown__element element-img-3-1">
+                    <a href="#" class="dropdown__link">
+                      Ван Гог
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-3-2">
+                    <a href="#" class="dropdown__link">
+                      Сезанн
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-3-3">
+                    <a href="#" class="dropdown__link">
+                      Гоген
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-3-4">
+                    <a href="#" class="dropdown__link">
+                      Сёра
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </li>
           <li class="dropdown__item">
@@ -239,28 +246,30 @@
               </svg>
             </button>
             <div class="dropdown__content">
-              <ul class="dropdown__list">
-                <li class="dropdown__element element-img-4-1">
-                  <a href="#" class="dropdown__link">
-                    Кандинский
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-4-2">
-                  <a href="#" class="dropdown__link">
-                    Маринетти
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-4-3">
-                  <a href="#" class="dropdown__link">
-                    Малевич
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-4-4">
-                  <a href="#" class="dropdown__link">
-                    Пикассо
-                  </a>
-                </li>
-              </ul>
+              <div class="dropdown__custom-scroll">
+                <ul class="dropdown__list">
+                  <li class="dropdown__element element-img-4-1">
+                    <a href="#" class="dropdown__link">
+                      Кандинский
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-4-2">
+                    <a href="#" class="dropdown__link">
+                      Маринетти
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-4-3">
+                    <a href="#" class="dropdown__link">
+                      Малевич
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-4-4">
+                    <a href="#" class="dropdown__link">
+                      Пикассо
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </li>
           <li class="dropdown__item">
@@ -271,28 +280,30 @@
               </svg>
             </button>
             <div class="dropdown__content">
-              <ul class="dropdown__list">
-                <li class="dropdown__element element-img-5-1">
-                  <a href="#" class="dropdown__link">
-                    Карра
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-5-2">
-                  <a href="#" class="dropdown__link">
-                    Прателла
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-5-3">
-                  <a href="#" class="dropdown__link">
-                    Северини
-                  </a>
-                </li>
-                <li class="dropdown__element element-img-5-4">
-                  <a href="#" class="dropdown__link">
-                    Балла
-                  </a>
-                </li>
-              </ul>
+              <div class="dropdown__custom-scroll">
+                <ul class="dropdown__list">
+                  <li class="dropdown__element element-img-5-1">
+                    <a href="#" class="dropdown__link">
+                      Карра
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-5-2">
+                    <a href="#" class="dropdown__link">
+                      Прателла
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-5-3">
+                    <a href="#" class="dropdown__link">
+                      Северини
+                    </a>
+                  </li>
+                  <li class="dropdown__element element-img-5-4">
+                    <a href="#" class="dropdown__link">
+                      Балла
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </li>
         </ul>
@@ -333,11 +344,22 @@
         </div>
       </div>
     </section>
+    <section class="about offset" id="about">
+      <div class="container about__container">
+        <h2 class="about__title title">
+          О&nbsp;нас
+        </h2>
+        <p class="about__description description">
+          Ясность нашей позиции очевидна: семантический разбор внешних противодействий однозначно определяет каждого участника как способного принимать собственные решения касаемо распределения внутренних резервов и&nbsp;ресурсов. Не&nbsp;следует, однако, забывать, что высококачественный прототип будущего проекта влечёт за&nbsp;собой процесс внедрения и&nbsp;модернизации модели развития. Повседневная практика показывает, что высокое качество позиционных исследований создаёт необходимость включения в&nbsp;производственный план целого ряда внеочередных мероприятий с&nbsp;учётом комплекса распределения внутренних резервов и&nbsp;ресурсов. В&nbsp;рамках спецификации современных стандартов, действия представителей оппозиции набирают популярность среди определённых слоёв населения, а&nbsp;значит, должны быть разоблачены.
+        </p>
+      </div>
+    </section>
   </main>
   <footer class="footer">
 
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
   <script src="./js/swiperScripts.js"></script>
   <script src="./js/burger-menu.js"></script>
   <script src="./js/search-btn.js"></script>
