added slider in gallery

--- a/index.html
+++ b/index.html
@@ -391,18 +391,54 @@
               </label>
             </form>
           </div>
-          <div class="gallery__content-right">
-            <div class="gallery__slider swiper">
-              <div class="gallery__slider-button">
-                <button class="gallery__slider-btn--prev swiper-btn--prev">prev</button>
-                <button class="gallery__slider-btn--next swiper-btn--next">next</button>
-              </div>
-              <div class="gallery__slider-wrapper swiper-wrapper">
-                <button class="gallery__slide swiper-slide btn-reset">
-                  <picture>
-                    <img class="gallery__slide-img swiper-slide--img" src="https://phonoteka.org/src.php?src=https://phonoteka.org/uploads/posts/2021-05/thumbs/1622164116_9-phonoteka_org-p-posteri-pop-art-krasivo-11.jpg&w=460&h=320" alt="изображение">
-                  </picture>
-                </button>
+          <div class="gallery__content-right gallery__slider swiper">
+            <div class="gallery__slider-button">
+              <button class="gallery__btn gallery__slider-btn--prev swiper-btn--prev btn-reset">
+                <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M15 30C6.71573 30 8.89561e-07 23.2843 1.25168e-06 15C1.61379e-06 6.71573 6.71573 -1.01779e-06 15 -6.55671e-07C23.2843 -2.93554e-07 30 6.71573 30 15C30 23.2843 23.2843 30 15 30Z" fill="#666666"/>
+                  <path d="M15 30C6.71573 30 8.89561e-07 23.2843 1.25168e-06 15C1.61379e-06 6.71573 6.71573 -1.01779e-06 15 -6.55671e-07C23.2843 -2.93554e-07 30 6.71573 30 15C30 23.2843 23.2843 30 15 30Z" stroke="black"/>
+                  <path d="M16 20L11 15L16 10" stroke="white"/>
+                </svg>
+              </button>
+              <button class="gallery__btn gallery__slider-btn--next swiper-btn--next btn-reset">
+                <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M15 30C23.2843 30 30 23.2843 30 15C30 6.71573 23.2843 -1.01779e-06 15 -6.55671e-07C6.71573 -2.93554e-07 2.93554e-07 6.71573 6.55671e-07 15C1.01779e-06 23.2843 6.71573 30 15 30Z" fill="#666666"/>
+                  <path d="M15 30C23.2843 30 30 23.2843 30 15C30 6.71573 23.2843 -1.01779e-06 15 -6.55671e-07C6.71573 -2.93554e-07 2.93554e-07 6.71573 6.55671e-07 15C1.01779e-06 23.2843 6.71573 30 15 30Z" stroke="black"/>
+                  <path d="M14 20L19 15L14 10" stroke="white"/>
+                </svg>
+              </button>
+            </div>
+            <div class="gallery__slider-wrapper swiper-wrapper">
+              <button class="gallery__slide swiper-slide btn-reset">
+                <picture>
+                  <img class="gallery__slide-img swiper-slide--img" src="./img/gallery/gallery-slide-1.jpg" alt="изображение">
+                </picture>
+              </button>
+              <button class="gallery__slide swiper-slide btn-reset">
+                <picture>
+                  <img class="gallery__slide-img swiper-slide--img" src="./img/gallery/gallery-slide-2.jpg" alt="изображение">
+                </picture>
+              </button>
+              <button class="gallery__slide swiper-slide btn-reset">
+                <picture>
+                  <img class="gallery__slide-img swiper-slide--img" src="./img/gallery/gallery-slide-3.jpg" alt="изображение">
+                </picture>
+              </button>
+              <button class="gallery__slide swiper-slide btn-reset">
+                <picture>
+                  <img class="gallery__slide-img swiper-slide--img" src="./img/gallery/gallery-slide-4.jpg" alt="изображение">
+                </picture>
+              </button>
+              <button class="gallery__slide swiper-slide btn-reset">
+                <picture>
+                  <img class="gallery__slide-img swiper-slide--img" src="./img/gallery/gallery-slide-5.png" alt="изображение">
+                </picture>
+              </button>
+              <button class="gallery__slide swiper-slide btn-reset">
+                <picture>
+                  <img class="gallery__slide-img swiper-slide--img" src="./img/gallery/gallery-slide-6.jpg" alt="изображение">
+                </picture>
+              </button>
             </div>
           </div>
         </div>
