--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css"/>
   <link rel="stylesheet" href="./libs/choices.min.css">
+  <link rel="stylesheet" href="./libs/accordion.min.css">
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/fonts.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -395,17 +396,17 @@
             <div class="gallery__slider-button flex">
               <button class="gallery__btn gallery__slider-btn--prev swiper-btn--prev btn-reset">
                 <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M15 30C6.71573 30 8.89561e-07 23.2843 1.25168e-06 15C1.61379e-06 6.71573 6.71573 -1.01779e-06 15 -6.55671e-07C23.2843 -2.93554e-07 30 6.71573 30 15C30 23.2843 23.2843 30 15 30Z" fill="#666666"/>
-                  <path d="M15 30C6.71573 30 8.89561e-07 23.2843 1.25168e-06 15C1.61379e-06 6.71573 6.71573 -1.01779e-06 15 -6.55671e-07C23.2843 -2.93554e-07 30 6.71573 30 15C30 23.2843 23.2843 30 15 30Z" stroke="black"/>
-                  <path d="M16 20L11 15L16 10" stroke="white"/>
+                  <path d="M15 30C6.71573 30 8.89561e-07 23.2843 1.25168e-06 15C1.61379e-06 6.71573 6.71573 -1.01779e-06 15 -6.55671e-07C23.2843 -2.93554e-07 30 6.71573 30 15C30 23.2843 23.2843 30 15 30Z"/>
+                  <path d="M15 30C6.71573 30 8.89561e-07 23.2843 1.25168e-06 15C1.61379e-06 6.71573 6.71573 -1.01779e-06 15 -6.55671e-07C23.2843 -2.93554e-07 30 6.71573 30 15C30 23.2843 23.2843 30 15 30Z"/>
+                  <path d="M16 20L11 15L16 10" stroke="#fff"/>
                 </svg>
               </button>
               <div class="gallery__slider--pagination"></div>
               <button class="gallery__btn gallery__slider-btn--next swiper-btn--next btn-reset">
                 <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M15 30C23.2843 30 30 23.2843 30 15C30 6.71573 23.2843 -1.01779e-06 15 -6.55671e-07C6.71573 -2.93554e-07 2.93554e-07 6.71573 6.55671e-07 15C1.01779e-06 23.2843 6.71573 30 15 30Z" fill="#666666"/>
-                  <path d="M15 30C23.2843 30 30 23.2843 30 15C30 6.71573 23.2843 -1.01779e-06 15 -6.55671e-07C6.71573 -2.93554e-07 2.93554e-07 6.71573 6.55671e-07 15C1.01779e-06 23.2843 6.71573 30 15 30Z" stroke="black"/>
-                  <path d="M14 20L19 15L14 10" stroke="white"/>
+                  <path d="M15 30C23.2843 30 30 23.2843 30 15C30 6.71573 23.2843 -1.01779e-06 15 -6.55671e-07C6.71573 -2.93554e-07 2.93554e-07 6.71573 6.55671e-07 15C1.01779e-06 23.2843 6.71573 30 15 30Z"/>
+                  <path d="M15 30C23.2843 30 30 23.2843 30 15C30 6.71573 23.2843 -1.01779e-06 15 -6.55671e-07C6.71573 -2.93554e-07 2.93554e-07 6.71573 6.55671e-07 15C1.01779e-06 23.2843 6.71573 30 15 30Z"/>
+                  <path d="M14 20L19 15L14 10" stroke="#fff"/>
                 </svg>
               </button>
             </div>
@@ -445,6 +446,157 @@
         </div>
       </div>
     </section>
+    <section class="catalog offset">
+      <div class="container catalog__container">
+        <h2 class="catalog__title title">
+          Каталог
+        </h2>
+        <p class="catalog__description description">
+          Акционеры крупнейших компаний, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и&nbsp;морали. Являясь всего лишь частью общей картины, стремящиеся вытеснить традиционное производство, нанотехнологии и&nbsp;по&nbsp;сей день остаются уделом либералов, которые жаждут быть функционально разнесены на&nbsp;независимые элементы.
+        </p>
+        <div class="catalog__content flex">
+          <div class="catalog__person">
+            <figure>
+              <picture>
+                <img src="./img/catalog/preson-12.jpg" alt="Историческая личность" class="catalog__img">
+              </picture>
+            </figure>
+            <h3 class="catalog__name-person title">
+              Доменико Гирландайо
+            </h3>
+            <i class="catalog__info-data">
+              2 июня 1448 — 11 января 1494
+            </i>
+            <p class="catalog__description-person description">
+              Один из&nbsp;ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и&nbsp;сын Ридольфо. Глава художественной мастерской, где юный Микеланджело в&nbsp;течение года овладевал профессиональными навыками. Автор фресковых циклов, в&nbsp;которых выпукло, со&nbsp;всевозможными подробностями показана домашняя жизнь библейских персонажей (в&nbsp;их&nbsp;роли выступают знатные граждане Флоренции в&nbsp;костюмах того времени).
+            </p>
+          </div>
+          <div class="catalog__accordion accordion">
+            <ul class="accordion__list" id="accordion">
+              <li class="accordion__item ac">
+                <div class="accordion__top">
+                  <h3 class="accordion__title title">
+                    C 1400 по 1499 гг
+                  </h3>
+                  <button class="accordion__btn btn-reset">
+                    <svg class="accordion__icon" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M33.3333 23.3333L25 31.6667L16.6667 23.3333" stroke="black"/>
+                    </svg>
+                  </button>
+                </div>
+                <div class="accordion__bottom ac-panel">
+                  some text
+                </div>
+              </li>
+              <li class="accordion__item ac">
+                <div class="accordion__top">
+                  <h3 class="accordion__title title">
+                    C 1500 по 1599 гг
+                  </h3>
+                  <button class="accordion__btn btn-reset">
+                    <svg class="accordion__icon" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M33.3333 23.3333L25 31.6667L16.6667 23.3333" stroke="black"/>
+                    </svg>
+                  </button>
+                </div>
+                <div class="accordion__bottom ac-panel">
+                  some text
+                </div>
+              </li>
+              <li class="accordion__item ac">
+                <div class="accordion__top">
+                  <h3 class="accordion__title title">
+                    C 1600 по 1699 гг
+                  </h3>
+                  <button class="accordion__btn btn-reset">
+                    <svg class="accordion__icon" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M33.3333 23.3333L25 31.6667L16.6667 23.3333" stroke="black"/>
+                    </svg>
+                  </button>
+                </div>
+                <div class="accordion__bottom ac-panel">
+                  some text
+                </div>
+              </li>
+              <li class="accordion__item ac">
+                <div class="accordion__top">
+                  <h3 class="accordion__title title">
+                    C 1700 по 1799 гг
+                  </h3>
+                  <button class="accordion__btn btn-reset">
+                    <svg class="accordion__icon" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M33.3333 23.3333L25 31.6667L16.6667 23.3333" stroke="black"/>
+                    </svg>
+                  </button>
+                </div>
+                <div class="accordion__bottom ac-panel">
+                  some text
+                </div>
+              </li>
+              <li class="accordion__item ac">
+                <div class="accordion__top">
+                  <h3 class="accordion__title title">
+                    C 1800 по 1899 гг
+                  </h3>
+                  <button class="accordion__btn btn-reset">
+                    <svg class="accordion__icon" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M33.3333 23.3333L25 31.6667L16.6667 23.3333" stroke="black"/>
+                    </svg>
+                  </button>
+                </div>
+                <div class="accordion__bottom ac-panel">
+                  some text
+                </div>
+              </li>
+              <li class="accordion__item ac">
+                <div class="accordion__top">
+                  <h3 class="accordion__title title">
+                    C 1900 по 1999 гг
+                  </h3>
+                  <button class="accordion__btn btn-reset">
+                    <svg class="accordion__icon" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M33.3333 23.3333L25 31.6667L16.6667 23.3333" stroke="black"/>
+                    </svg>
+                  </button>
+                </div>
+                <div class="accordion__bottom ac-panel">
+                  some text
+                </div>
+              </li>
+              <li class="accordion__item ac">
+                <div class="accordion__top">
+                  <h3 class="accordion__title title">
+                    C 2000 г
+                  </h3>
+                  <button class="accordion__btn btn-reset">
+                    <svg class="accordion__icon" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M50 25C50 38.8071 38.8071 50 25 50C11.1929 50 0 38.8071 0 25C0 11.1929 11.1929 0 25 0C38.8071 0 50 11.1929 50 25Z"/>
+                      <path d="M33.3333 23.3333L25 31.6667L16.6667 23.3333" stroke="black"/>
+                    </svg>
+                  </button>
+                </div>
+                <div class="accordion__bottom ac-panel">
+                  some text
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
 
@@ -452,7 +604,9 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
   <script src="./libs/choices.min.js"></script>
+  <script src="./libs/accordion.min.js"></script>
   <script src="./js/choices-plugin.js"></script>
+  <script src="./js/accordion.js"></script>
   <script src="./js/swiperScripts.js"></script>
   <script src="./js/burger-menu.js"></script>
   <script src="./js/search-btn.js"></script>
