added logic tabs and correct accordion style

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
           Акционеры крупнейших компаний, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и&nbsp;морали. Являясь всего лишь частью общей картины, стремящиеся вытеснить традиционное производство, нанотехнологии и&nbsp;по&nbsp;сей день остаются уделом либералов, которые жаждут быть функционально разнесены на&nbsp;независимые элементы.
         </p>
         <div class="catalog__content flex">
-          <div class="catalog__person">
+          <div class="catalog__person catalog__person--active" data-target="two">
             <figure>
               <picture>
                 <img src="./img/catalog/preson-12.jpg" alt="Историческая личность" class="catalog__img">
@@ -469,6 +469,22 @@
             </i>
             <p class="catalog__description-person description">
               Один из&nbsp;ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и&nbsp;сын Ридольфо. Глава художественной мастерской, где юный Микеланджело в&nbsp;течение года овладевал профессиональными навыками. Автор фресковых циклов, в&nbsp;которых выпукло, со&nbsp;всевозможными подробностями показана домашняя жизнь библейских персонажей (в&nbsp;их&nbsp;роли выступают знатные граждане Флоренции в&nbsp;костюмах того времени).
+            </p>
+          </div>
+          <div class="catalog__person" data-target="one">
+            <figure>
+              <picture>
+                <img src="./img/catalog/person-1.jpg" alt="Историческая личность" class="catalog__img">
+              </picture>
+            </figure>
+            <h3 class="catalog__name-person title">
+              Бенедетто ди Биндо
+            </h3>
+            <i class="catalog__info-data">
+              2 июня 1380 — 19 сентября 1417
+            </i>
+            <p class="catalog__description-person description">
+              Бенедетто ди&nbsp;Биндо остался в&nbsp;истории искусства как сиенский художник, так сказать, &laquo;второго ряда&raquo;, несмотря на&nbsp;то, что за&nbsp;свою короткую жизнь он&nbsp;выполнил ряд весьма престижных заказов, включая работы в&nbsp;Сиенском соборе (работы в&nbsp;главном соборе республики второстепенным художникам не&nbsp;поручались). Обучение он&nbsp;прошёл у&nbsp;Таддео ди&nbsp;Бартоло, крупного сиенского мастера поздней готики, в&nbsp;боттеге которого Бенедетто трудился вместе с&nbsp;Грегорио ди&nbsp;Чекко. Наибольшее влияние на&nbsp;его творчество оказали работы Симоне Мартини, в&nbsp;частности в&nbsp;выборе колорита, а&nbsp;тонко проработанные лица его персонажей напоминают произведения Джованни да&nbsp;Милано.
             </p>
           </div>
           <div class="catalog__accordion accordion">
@@ -487,7 +503,129 @@
                   </button>
                 </div>
                 <div class="accordion__bottom ac-panel">
-                  some text
+                  <ul class="accordion__persons-list">
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset" data-path="one">
+                        Бенедетто ди Биндо
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Бергоньоне, Амброджо
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Биссоло, Франческо
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Больтраффио, Джованни
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Бонсиньори, Франческо
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Боттичини, Рафаэлло
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Брамантино
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Бреа, Людовико
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Бьяджо д’Антонио Туччи
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Веккьетта
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Андреа Верроккьо
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person accordion__btn-person--active btn-reset" data-path="two">
+                        Доменико Гирландайо
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Беноццо Гоццоли
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Граначчи, Франческо
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Грегорио ди Чекко
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Джованни да Удине
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Джованни ди Паоло
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Джорджоне
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Парентино, Бернардо
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Пезеллино
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Пьетро Перуджино
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Перуцци, Бальдассаре
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Пизанелло
+                      </button>
+                    </li>
+                    <li class="accordion__persons-item">
+                      <button class="accordion__btn-person btn-reset">
+                        Пинтуриккьо
+                      </button>
+                    </li>
+
+                  </ul>
                 </div>
               </li>
               <li class="accordion__item ac">
@@ -504,7 +642,22 @@
                   </button>
                 </div>
                 <div class="accordion__bottom ac-panel">
-                  some text
+                  <div class="accordion__empty flex">
+                    <span class="accordion__fugure"></span>
+                    <div class="accordion__text">
+                      <h3 class="accordion__subtitle title">
+                        Здесь пока пусто
+                      </h3>
+                      <p class="accordion__desc description">
+                        А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
+                      </p>
+                      <div class="accordion__action">
+                        <a href="#" class="accordion__link-btn">
+                          В галерею
+                        </a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </li>
               <li class="accordion__item ac">
@@ -521,7 +674,22 @@
                   </button>
                 </div>
                 <div class="accordion__bottom ac-panel">
-                  some text
+                  <div class="accordion__empty flex">
+                    <span class="accordion__fugure"></span>
+                    <div class="accordion__text">
+                      <h3 class="accordion__subtitle title">
+                        Здесь пока пусто
+                      </h3>
+                      <p class="accordion__desc description">
+                        А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
+                      </p>
+                      <div class="accordion__action">
+                        <a href="#" class="accordion__link-btn">
+                          В галерею
+                        </a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </li>
               <li class="accordion__item ac">
@@ -538,7 +706,22 @@
                   </button>
                 </div>
                 <div class="accordion__bottom ac-panel">
-                  some text
+                  <div class="accordion__empty flex">
+                    <span class="accordion__fugure"></span>
+                    <div class="accordion__text">
+                      <h3 class="accordion__subtitle title">
+                        Здесь пока пусто
+                      </h3>
+                      <p class="accordion__desc description">
+                        А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
+                      </p>
+                      <div class="accordion__action">
+                        <a href="#" class="accordion__link-btn">
+                          В галерею
+                        </a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </li>
               <li class="accordion__item ac">
@@ -555,7 +738,22 @@
                   </button>
                 </div>
                 <div class="accordion__bottom ac-panel">
-                  some text
+                  <div class="accordion__empty flex">
+                    <span class="accordion__fugure"></span>
+                    <div class="accordion__text">
+                      <h3 class="accordion__subtitle title">
+                        Здесь пока пусто
+                      </h3>
+                      <p class="accordion__desc description">
+                        А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
+                      </p>
+                      <div class="accordion__action">
+                        <a href="#" class="accordion__link-btn">
+                          В галерею
+                        </a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </li>
               <li class="accordion__item ac">
@@ -572,7 +770,22 @@
                   </button>
                 </div>
                 <div class="accordion__bottom ac-panel">
-                  some text
+                  <div class="accordion__empty flex">
+                    <span class="accordion__fugure"></span>
+                    <div class="accordion__text">
+                      <h3 class="accordion__subtitle title">
+                        Здесь пока пусто
+                      </h3>
+                      <p class="accordion__desc description">
+                        А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
+                      </p>
+                      <div class="accordion__action">
+                        <a href="#" class="accordion__link-btn">
+                          В галерею
+                        </a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </li>
               <li class="accordion__item ac">
@@ -589,7 +802,22 @@
                   </button>
                 </div>
                 <div class="accordion__bottom ac-panel">
-                  some text
+                  <div class="accordion__empty flex">
+                    <span class="accordion__fugure"></span>
+                    <div class="accordion__text">
+                      <h3 class="accordion__subtitle title">
+                        Здесь пока пусто
+                      </h3>
+                      <p class="accordion__desc description">
+                        А&nbsp;в&nbsp;галерее вы&nbsp;всегда можете найти что-то интересное для себя
+                      </p>
+                      <div class="accordion__action">
+                        <a href="#" class="accordion__link-btn">
+                          В галерею
+                        </a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </li>
             </ul>
@@ -611,5 +839,6 @@
   <script src="./js/burger-menu.js"></script>
   <script src="./js/search-btn.js"></script>
   <script src="./js/dropdown.js"></script>
+  <script src="./js/tabs.js"></script>
 </body>
 </html>
