write adaptive for section catalog

--- a/index.html
+++ b/index.html
@@ -487,6 +487,24 @@
               Бенедетто ди&nbsp;Биндо остался в&nbsp;истории искусства как сиенский художник, так сказать, &laquo;второго ряда&raquo;, несмотря на&nbsp;то, что за&nbsp;свою короткую жизнь он&nbsp;выполнил ряд весьма престижных заказов, включая работы в&nbsp;Сиенском соборе (работы в&nbsp;главном соборе республики второстепенным художникам не&nbsp;поручались). Обучение он&nbsp;прошёл у&nbsp;Таддео ди&nbsp;Бартоло, крупного сиенского мастера поздней готики, в&nbsp;боттеге которого Бенедетто трудился вместе с&nbsp;Грегорио ди&nbsp;Чекко. Наибольшее влияние на&nbsp;его творчество оказали работы Симоне Мартини, в&nbsp;частности в&nbsp;выборе колорита, а&nbsp;тонко проработанные лица его персонажей напоминают произведения Джованни да&nbsp;Милано.
             </p>
           </div>
+          <div class="catalog__person" data-target="mask">
+            <figure>
+              <picture>
+                <img src="./img/catalog/not-img.jpg" alt="Историческая личность" class="catalog__img">
+              </picture>
+            </figure>
+            <h3 class="catalog__name-person title">
+              Что мы о нём знаем?
+            </h3>
+            <p class="catalog__description-person description">
+              Пока ничего… Зато мы точно знаем, что в галерее есть на что посмотреть!
+            </p>
+            <div class="catalog__action">
+              <a href="#" class="catalog__btn-link">
+                В галерею
+              </a>
+            </div>
+          </div>
           <div class="catalog__accordion accordion">
             <ul class="accordion__list" id="accordion">
               <li class="accordion__item ac">
@@ -510,7 +528,7 @@
                       </button>
                     </li>
                     <li class="accordion__persons-item">
-                      <button class="accordion__btn-person btn-reset">
+                      <button class="accordion__btn-person btn-reset" data-path="mask">
                         Бергоньоне, Амброджо
                       </button>
                     </li>
